--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: windows-latest
+        os: [ubuntu-latest, windows-latest]
     steps:
 
     - name: Set up Go 1.12
@@ -21,7 +21,11 @@ jobs:
 
     - name: Get dependencies
       run: |
-        go get -v -t -d
-        
+        GOOS=windows GOARCH=amd64 go get -v -t -d ./...
+        #if [ -f Gopkg.toml ]; then
+        #    curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+        #    dep ensure
+        #fi
+
     - name: Build
-      run: go build -v .
+      run: GOOS=windows GOARCH=amd64 go build -v .
