--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [windows-latest]
     steps:
 
     - name: Set up Go 1.12
@@ -21,11 +21,7 @@ jobs:
 
     - name: Get dependencies
       run: |
-        GOOS=windows GOARCH=amd64 go get -v -t -d ./...
-        #if [ -f Gopkg.toml ]; then
-        #    curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-        #    dep ensure
-        #fi
-
+        go get -v -t -d 
+        
     - name: Build
-      run: GOOS=windows GOARCH=amd64 go build -v .
+      run: go build -v .
